--- a/ASL App.html
+++ b/ASL App.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Custom Registration Tutorial</title>
+    <title>Localist - Classified Ads</title>
 </head>
 <body>
 
@@ -22,6 +22,7 @@
 
 
 </body>
+
 
 
 
